# tbb

./: Makefile  README.md  README.org
.github/workflows/: ccpp.yml
example_cmake_extarnal_project/: CMakeLists.txt  main.cpp
include/tbb/: tbb_config.h
